--- a/src/template.html
+++ b/src/template.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#333333" />
+    <link href="https://fonts.googleapis.com/css?family=Lato|Poppins|Comforataa&display=swap" rel="stylesheet">
 
     %sapper.base%
 
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
+    <link rel='stylesheet' href='fonts/icons/style.css'>
     <link rel="icon" type="image/png" href="favicon.png" />
 
     <!-- Sapper generates a <style> tag containing critical CSS
